<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint= "@string/heightPlaceHolder"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/weightPlaceHolder"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/womenRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/woman"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/menRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/man"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:padding="17dp"
        android:textSize="17dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>