<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint= "@string/heightPlaceHolder"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/weightPlaceHolder"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
            <RadioButton
                android:id="@+id/womenRadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/woman"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <RadioButton
                android:id="@+id/menRadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/man"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"/>
    </RadioGroup>
    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:padding="17dp"
        android:textSize="17dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/resultHorizontalLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/validateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/resultVerticalLinear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/validateButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/imcText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text="@string/imc"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:text=""
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/estado1"
            android:padding="20dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>